# lang

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
include/: AST.h  Arena.h  Base.h  Lexer.h  Parser.h  Reporting.h  SourceFile.h  Token.h
include/ADT/: List.h  NonOwningList.h
include/AST/: AST.h  ASTPrinter.h  ASTVisitor.h
include/Alloc/: Arena.h
include/Analysis/: CFA.h  Resolver.h  TypeChecker.h
include/Codegen/: Codegen.h
include/Frontend/: AST.h  ASTPrinter.h  ASTVisitor.h  Lexer.h  Parser.h  Resolver.h  Sema.h  Token.h  Type.h
include/Lex/: Lexer.h  Token.h
include/Parse/: Parser.h
include/Sema/: Resolver.h  Sema.h  Type.h
include/Support/: Debug.h  Reporting.h  SourceFile.h  Utilities.h
include/Typing/: Type.h  TypeContext.h
samples/: 1.lang  11.lang  2.lang  3.lang  4.lang  5.lang  6.lang  7.lang  8.lang  9.lang  test.py  test.sh
samples/error/: 03.lang  04.lang
samples/valid/: 01.lang  02.lang  1.lang  10.lang  8.lang
src/: Arena.cpp  CMakeLists.txt  Lexer.cpp  Reporting.cpp  SourceFile.cpp  Token.cpp  main.cpp
src/AST/: AST.cpp  ASTPrinter.cpp
src/Alloc/: Arena.cpp
src/Analysis/: CFA.cpp  Resolver.cpp  TypeChecker.cpp
src/Codegen/: Codegen.cpp
src/Frontend/: AST.cpp  ASTPrinter.cpp  Lexer.cpp  Parser.cpp  Resolver.cpp  Token.cpp
src/Lex/: Lexer.cpp  Token.cpp
src/Parse/: Parser.cpp
src/Sema/: Resolver.cpp  Sema.cpp  Type.cpp
src/Support/: Reporting.cpp  SourceFile.cpp
src/Typing/: Type.cpp
tests/: main.py
